--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: ruff
         types:
           - python
-        args: [ --fix ]
+        args: [ --fix, --exit-non-zero-on-fix]
       # Run the formatter.
       - id: ruff-format
         types:
